--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Template</title>
 
+<link rel="stylesheet" type="text/css" href="libraries/font-awesome/css/font-awesome.min.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 <link rel="stylesheet" type="text/css" href="css/helpers.css" />
 
@@ -13,7 +14,25 @@
 
 <div class="wrap">
 	<nav class="navbar navbar-black">
+    	<div class="navbar-wrap">
+            <div class="navbar-3-col">
+                <a href="#" class="btn btn-gray-sub-1">Featured</a>
+            </div>
+            <div class="navbar-3-col">
+            	<a href="#"><i class="icon-align-center"></i></a>
+                <a href="#"><i class="icon-anchor"></i></a>
+                <a href="#"><i class="icon-zoom-out"></i></a>
+            </div>
+            <div class="navbar-3-col">
+            	Hey
+            </div>
+        </div>
     </nav>
+    
+    <div class="full-width-container">
+    	<img class="img-responsive" height="200px" src="../../My Box Files/Arun's Folder/Useful Things/Personal/Headshot/Arun Sood - Headshot (Large).jpg" />
+    </div>
+    
     <div class="padded-container" style="border:1px solid;">
     	<div class="well">
         	<div class="well-title">
