--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Template</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 <link rel="stylesheet" type="text/css" href="libraries/font-awesome/css/font-awesome.min.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -32,7 +33,7 @@
     </nav>
     
     <div class="full-width-container navbar-fixed-space">
-    	<img class="img-responsive" src="../../My Box Files/Arun's Folder/Useful Things/Personal/Headshot/Arun Sood - Headshot (Large).jpg" />
+    	<img class="img-responsive" src="img/arun.jpg" />
     </div>
     
     <div class="padded-container">
