--- a/index2.html
+++ b/index2.html
@@ -84,7 +84,7 @@
     </div>
     
     <div class="padded-container">
-    	<a href="index2.html" class="btn btn-blue-primary-1">Take Me Away</a>
+    	<a href="index.html" class="btn btn-blue-primary-1">Take Me Back</a>
     </div>
     
     <footer class="footer footer-fixed footer-white">
