--- a/index2.html
+++ b/index2.html
@@ -13,13 +13,26 @@
 
 <body class="body-slight-gray">
 
-	<div id="myMenu" class="sliding-menu-left-1">
+	<div id="myMenu" class="sliding-menu sliding-menu-left-1">
     	<ul class="sliding-menu-nav">
+        	<li class="nav-search">
+            	<input type="text" placeholder="Search here" />
+            </li>
         	<li class="nav-header">
             	This is my header
             </li>
-            <li>Hey</li>
-            <li>Hey</li>
+            <li>
+            	<a href="#"><i class="icon-apple margin-icon-space"></i> My Dashboard</a>
+            </li>
+            <li class="active">
+            	<a href="#"><i class="icon-archive margin-icon-space"></i> My Profile</a>
+            </li>
+            <li>
+            	<a href="#"><i class="icon-apple margin-icon-space"></i> My Dashboard</a>
+            </li>
+            <li>
+            	<a href="#"><i class="icon-apple margin-icon-space"></i> My Dashboard</a>
+            </li>
         </ul>
     </div>
 
